--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/Favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inkantress</title>
+    <title>Inkantress Art & Design</title>
   </head>
   <body>
     <div id="root"></div>
