Restyle showcase + flesh out UI of contact form

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function () {
+        // https://dashboard.emailjs.com/admin/account
+        emailjs.init({
+          publicKey: "EpNVqGSpiHnmPJN22",
+        });
+      })();
+    </script>
   </body>
 </html>
